// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chromium / 1`] = `Array []`;

exports[`chromium /api/button/ 1`] = `Array []`;

exports[`chromium /api/select/ 1`] = `Array []`;

exports[`chromium /components/breadcrumbs 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      "#demo-REMOVED_UNSTABLE_USE_ID_VALUE_FROM_SNAPSHOT > .MuiBreadcrumbs-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiTypography-root-MuiBreadcrumbs-root[aria-label=\\"breadcrumb\\"]",
    ],
  },
]
`;

exports[`chromium /components/button-group/ 1`] = `Array []`;

exports[`chromium /components/buttons/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.1/aria-progressbar-name?application=axeAPI",
    "id": "aria-progressbar-name",
    "nodes": Array [
      ".MuiLoadingButton-pendingIndicatorCenter.MuiLoadingButton-pendingIndicator > .MuiCircularProgress-root.MuiCircularProgress-indeterminate.MuiCircularProgress-colorInherit",
      ".MuiLoadingButton-pendingIndicatorStart > .MuiCircularProgress-root.MuiCircularProgress-indeterminate.MuiCircularProgress-colorInherit",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.1/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      ".MuiLoadingButton-pending.Mui-disabled.MuiLoadingButton-root:nth-child(1)",
      ".MuiLoadingButton-pending.Mui-disabled.MuiLoadingButton-root:nth-child(2)",
    ],
  },
]
`;

exports[`chromium /components/checkboxes/ 1`] = `Array []`;

exports[`chromium /components/dialogs/ 1`] = `Array []`;

exports[`chromium /components/pagination/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .MuiPagination-text.MuiPagination-root[aria-label=\\"pagination\\\\ navigation\\"]:nth-child(1)",
    ],
  },
]
`;

exports[`chromium /components/pickers 1`] = `Array []`;

exports[`chromium /components/radio-buttons 1`] = `Array []`;

exports[`chromium /components/rating/ 1`] = `Array []`;

exports[`chromium /components/selects/ 1`] = `Array []`;

exports[`chromium /components/slider 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.1/aria-valid-attr-value?application=axeAPI",
    "id": "aria-valid-attr-value",
    "nodes": Array [
      "input[aria-labelledby=\\"discrete-slider-small-steps\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.1/label?application=axeAPI",
    "id": "label",
    "nodes": Array [
      "input[value=\\"\\\\31 0\\"][aria-orientation=\\"horizontal\\"][aria-valuemax=\\"\\\\31 00\\"]",
    ],
  },
]
`;

exports[`chromium /components/switches/ 1`] = `Array []`;

exports[`chromium /components/tabs/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.1/duplicate-id-aria?application=axeAPI",
    "id": "duplicate-id-aria",
    "nodes": Array [
      "div[aria-labelledby=\\"demo-a11y-tabs-automatic-label\\"] > .Mui-selected.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiTab-root[aria-controls=\\"a11y-tabpanel-0\\"]",
      "div[aria-labelledby=\\"demo-a11y-tabs-automatic-label\\"] > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiTab-root.MuiTab-textColorInherit[aria-controls=\\"a11y-tabpanel-1\\"]",
      "div[aria-labelledby=\\"demo-a11y-tabs-automatic-label\\"] > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiTab-root.MuiTab-textColorInherit[aria-controls=\\"a11y-tabpanel-2\\"]",
    ],
  },
]
`;

exports[`chromium /components/text-fields/ 1`] = `Array []`;

exports[`chromium /components/tooltips/ 1`] = `Array []`;

exports[`chromium /components/transfer-list 1`] = `Array []`;

exports[`chromium /components/tree-view/ 1`] = `Array []`;
